--- a/timeline/css/timeline.css
+++ b/timeline/css/timeline.css
@@ -1,27 +1,398 @@
 /* Timeline CSS */
 
+/* icon-ratio 4: 40px; */
+/* Endpunkt */
+
 .timeline-container {
 	position: relative;
+	padding-right: 20px;
+	padding-left: 20px;
 }
 
-.timeline-container::before {
-	content: '';
+.timeline-container>.timeline-line {
 	position: absolute;
-	top: 0;
 	height: 100%;
 	width: 4px;
 	background-color: rgba(0, 0, 0, 0.1);
 }
 
-.timeline-container-left::before {
-	left: 0;
+.timeline-align-right>.timeline-line {
+	left: 20px;
 }
 
-.timeline-container-right::before {
-	right: 0;
+.timeline-align-left>.timeline-line {
+	left: 100%;
 }
 
-.timeline-container-alternate::before {
+.timeline-align-right-alternate>.timeline-line,
+.timeline-align-left-alternate>.timeline-line {
 	left: 50%;
 	transform: translateX(-50%);
+}
+
+.timeline-align-right>div>.el-item {
+	width: auto;
+	left: 0;
+	padding-left: 40px;
+padding-right: 0;
+}
+
+.timeline-align-left>div>.el-item {
+	width: auto;
+	left: 0;
+	padding-right: 40px;
+padding-left: 0;
+}
+
+.timeline-align-right-alternate>div:nth-child(odd)>.el-item {
+	width: calc(50% - 40px);
+	left: 50%;
+	padding-left: 40px;
+padding-right: 0;
+}
+
+.timeline-align-right-alternate>div:nth-child(even)>.el-item {
+	width: calc(50% - 40px);
+	left: 0;
+	padding-right: 40px;
+padding-left: 0;
+}
+
+.timeline-align-left-alternate>div:nth-child(odd)>.el-item {
+	width: calc(50% - 40px);
+	left: 0;
+	padding-right: 40px;
+padding-left: 0;
+}
+
+.timeline-align-left-alternate>div:nth-child(even)>.el-item {
+	width: calc(50% - 40px);
+	left: 50%;
+	padding-left: 40px;
+padding-right: 0;
+}
+
+.timeline-container>div>.el-icon {
+	position: absolute;
+	border-radius: 50%;
+}
+
+.timeline-align-right>div>.el-icon {
+	left: calc(-1*(40px - 4px) * 0.5);
+}
+
+.timeline-align-left>div>.el-icon {
+	left: calc(100% - (40px - 4px) * 0.5);
+}
+
+.timeline-align-right-alternate>div>.el-icon,
+.timeline-align-left-alternate>div>.el-icon {
+	left: calc(50% - 40px * 1);
+}
+
+@media (min-width: 640px) {
+	.timeline-align-right\@s >.timeline-line {
+		left: 20px;
+	}
+
+	.timeline-align-left\@s >.timeline-line {
+		left: calc(100%-20px);
+	}
+
+	.timeline-align-right-alternate\@s >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.timeline-align-left-alternate\@s >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+
+	.timeline-align-right\@s>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-left\@s>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-right-alternate\@s >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right-alternate\@s >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@s >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@s >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right\@s>div>.el-icon {
+		left: calc(-1*(40px - 4px) * 0.5);
+	}
+
+	.timeline-align-left\@s>div>.el-icon {
+		left: calc(100% - (40px - 4px) * 0.5);
+	}
+
+	.timeline-align-right-alternate\@s>div>.el-icon,
+	.timeline-align-left-alternate\@s>div>.el-icon {
+		left: calc(50% - 40px * 1);
+	}
+}
+
+@media (min-width: 960px) {
+
+	.timeline-align-right\@m >.timeline-line {
+		left: 20px;
+	}
+
+	.timeline-align-left\@m >.timeline-line {
+		left: calc(100%-20px);
+	}
+
+	.timeline-align-right-alternate\@m >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.timeline-align-left-alternate\@m >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+
+	.timeline-align-right\@m>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-left\@m>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-right-alternate\@m >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right-alternate\@m >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@m >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@m >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right\@m>div>.el-icon {
+		left: calc(-1*(40px - 4px) * 0.5);
+	}
+
+	.timeline-align-left\@m>div>.el-icon {
+		left: calc(100% - (40px - 4px) * 0.5);
+	}
+
+	.timeline-align-right-alternate\@m>div>.el-icon,
+	.timeline-align-left-alternate\@m>div>.el-icon {
+		left: calc(50% - 40px * 1);
+	}
+}
+
+@media (min-width: 1200px) {
+
+	.timeline-align-right\@l >.timeline-line {
+		left: 20px;
+	}
+
+	.timeline-align-left\@l >.timeline-line {
+		left: calc(100%-20px);
+	}
+
+	.timeline-align-right-alternate\@l >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.timeline-align-left-alternate\@l >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+
+	.timeline-align-right\@l>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-left\@l>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-right-alternate\@l >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right-alternate\@l >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@l >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@l >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right\@l>div>.el-icon {
+		left: calc(-1*(40px - 4px) * 0.5);
+	}
+
+	.timeline-align-left\@l>div>.el-icon {
+		left: calc(100% - (40px - 4px) * 0.5);
+	}
+
+	.timeline-align-right-alternate\@l>div>.el-icon,
+	.timeline-align-left-alternate\@l>div>.el-icon {
+		left: calc(50% - 40px * 1);
+	}
+}
+
+@media (min-width: 1600px) {
+
+	.timeline-align-right\@xl >.timeline-line {
+		left: 20px;
+	}
+
+	.timeline-align-left\@xl >.timeline-line {
+		left: calc(100%-20px);
+	}
+
+	.timeline-align-right-alternate\@xl >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+	.timeline-align-left-alternate\@xl >.timeline-line {
+		left: 50%;
+		transform: translateX(-50%);
+	}
+
+
+	.timeline-align-right\@xl>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-left\@xl>div>.el-item {
+		width: auto;
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-right-alternate\@xl >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right-alternate\@xl >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@xl >div:nth-child(odd)>.el-item {
+		width: calc(50% - 40px);
+		left: 0;
+		padding-right: 40px;
+padding-left: 0;
+	}
+
+	.timeline-align-left-alternate\@xl >div:nth-child(even)>.el-item {
+		width: calc(50% - 40px);
+		left: 50%;
+		padding-left: 40px;
+padding-right: 0;
+	}
+
+	.timeline-align-right\@xl>div>.el-icon {
+		left: calc(-1*(40px - 4px) * 0.5);
+	}
+
+	.timeline-align-left\@xl>div>.el-icon {
+		left: calc(100% - (40px - 4px) * 0.5);
+	}
+
+	.timeline-align-right-alternate\@xl>div>.el-icon,
+	.timeline-align-left-alternate\@xl>div>.el-icon {
+		left: calc(50% - 40px * 1);
+	}
 }
