--- a/timeline/css/timeline.css
+++ b/timeline/css/timeline.css
@@ -1,7 +1,10 @@
 /* Timeline CSS */
 
-/* icon-ratio 4: 40px; */
-/* Endpunkt */
+:root {
+	--timeline-line-width: 4px;
+	--timeline-icon-size: 40px;
+	--timeline-line-color: rgba(0, 0, 0, 0.1);
+}
 
 .timeline-container {
 	position: relative;
@@ -12,8 +15,22 @@
 .timeline-container>.timeline-line {
 	position: absolute;
 	height: 100%;
-	width: 4px;
-	background-color: rgba(0, 0, 0, 0.1);
+	width: var(--timeline-line-width);
+	background-color: var(--timeline-line-color);
+}
+
+.timeline-container>.timeline-line::after {
+	content: '';
+	height: calc(var(--timeline-line-width) * 4);
+	width: calc(var(--timeline-line-width) * 4);
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translate(-50%, 100%);
+	border-color: var(--timeline-line-color);
+	border-width: 4px;
+	border-style: solid;
+	border-radius: 50%;
 }
 
 .timeline-align-right>.timeline-line {
@@ -21,7 +38,7 @@
 }
 
 .timeline-align-left>.timeline-line {
-	left: 100%;
+	left: calc(100% - var(--timeline-icon-size) - var(--timeline-line-width) / 2);
 }
 
 .timeline-align-right-alternate>.timeline-line,
@@ -33,61 +50,65 @@
 .timeline-align-right>div>.el-item {
 	width: auto;
 	left: 0;
-	padding-left: 40px;
-padding-right: 0;
+	padding-left: var(--timeline-icon-size);
+	padding-right: 0;
 }
 
 .timeline-align-left>div>.el-item {
 	width: auto;
 	left: 0;
-	padding-right: 40px;
-padding-left: 0;
+	padding-right: 80px;
+	padding-left: 0;
 }
 
 .timeline-align-right-alternate>div:nth-child(odd)>.el-item {
-	width: calc(50% - 40px);
+	width: calc(50% - var(--timeline-icon-size));
 	left: 50%;
-	padding-left: 40px;
-padding-right: 0;
+	padding-left: var(--timeline-icon-size);
+	padding-right: 0;
 }
 
 .timeline-align-right-alternate>div:nth-child(even)>.el-item {
-	width: calc(50% - 40px);
+	width: calc(50% - var(--timeline-icon-size));
 	left: 0;
-	padding-right: 40px;
-padding-left: 0;
+	padding-right: 80px;
+	padding-left: 0;
 }
 
 .timeline-align-left-alternate>div:nth-child(odd)>.el-item {
-	width: calc(50% - 40px);
+	width: calc(50% - var(--timeline-icon-size));
 	left: 0;
-	padding-right: 40px;
-padding-left: 0;
+	padding-right: 80px;
+	padding-left: 0;
 }
 
 .timeline-align-left-alternate>div:nth-child(even)>.el-item {
-	width: calc(50% - 40px);
+	width: calc(50% - var(--timeline-icon-size));
 	left: 50%;
-	padding-left: 40px;
-padding-right: 0;
+	padding-left: var(--timeline-icon-size);
+	padding-right: 0;
 }
 
 .timeline-container>div>.el-icon {
 	position: absolute;
+	background-color: #fff;
 	border-radius: 50%;
+	border-color: var(--timeline-line-color);
+	border-width: 4px;
+	border-style: solid;
 }
 
 .timeline-align-right>div>.el-icon {
-	left: calc(-1*(40px - 4px) * 0.5);
+	left: calc(-1*(var(--timeline-icon-size) - var(--timeline-line-width)) * 0.5);
 }
 
 .timeline-align-left>div>.el-icon {
-	left: calc(100% - (40px - 4px) * 0.5);
+	left: calc(100% - (var(--timeline-icon-size)) * 2);
 }
 
 .timeline-align-right-alternate>div>.el-icon,
 .timeline-align-left-alternate>div>.el-icon {
-	left: calc(50% - 40px * 1);
+	left: calc(50% - var(--timeline-icon-size) * 1);
 }
 
 @media (min-width: 640px) {
@@ -96,7 +117,7 @@ padding-right: 0;
 	}
 
 	.timeline-align-left\@s >.timeline-line {
-		left: calc(100%-20px);
+		left: calc(100% - var(--timeline-icon-size) - var(--timeline-line-width) / 2);
 	}
 
 	.timeline-align-right-alternate\@s >.timeline-line {
@@ -113,56 +134,56 @@ padding-right: 0;
 	.timeline-align-right\@s>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-left\@s>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-right-alternate\@s >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right-alternate\@s >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@s >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@s >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right\@s>div>.el-icon {
-		left: calc(-1*(40px - 4px) * 0.5);
+		left: calc(-1*(var(--timeline-icon-size) - var(--timeline-line-width)) * 0.5);
 	}
 
 	.timeline-align-left\@s>div>.el-icon {
-		left: calc(100% - (40px - 4px) * 0.5);
+		left: calc(100% - (var(--timeline-icon-size)) * 2);
 	}
 
 	.timeline-align-right-alternate\@s>div>.el-icon,
 	.timeline-align-left-alternate\@s>div>.el-icon {
-		left: calc(50% - 40px * 1);
+		left: calc(50% - var(--timeline-icon-size) * 1);
 	}
 }
 
@@ -173,7 +194,7 @@ padding-right: 0;
 	}
 
 	.timeline-align-left\@m >.timeline-line {
-		left: calc(100%-20px);
+		left: calc(100% - var(--timeline-icon-size) - var(--timeline-line-width) / 2);
 	}
 
 	.timeline-align-right-alternate\@m >.timeline-line {
@@ -190,56 +211,56 @@ padding-right: 0;
 	.timeline-align-right\@m>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-left\@m>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-right-alternate\@m >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right-alternate\@m >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@m >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@m >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right\@m>div>.el-icon {
-		left: calc(-1*(40px - 4px) * 0.5);
+		left: calc(-1*(var(--timeline-icon-size) - var(--timeline-line-width)) * 0.5);
 	}
 
 	.timeline-align-left\@m>div>.el-icon {
-		left: calc(100% - (40px - 4px) * 0.5);
+		left: calc(100% - (var(--timeline-icon-size)) * 2);
 	}
 
 	.timeline-align-right-alternate\@m>div>.el-icon,
 	.timeline-align-left-alternate\@m>div>.el-icon {
-		left: calc(50% - 40px * 1);
+		left: calc(50% - var(--timeline-icon-size) * 1);
 	}
 }
 
@@ -250,7 +271,7 @@ padding-right: 0;
 	}
 
 	.timeline-align-left\@l >.timeline-line {
-		left: calc(100%-20px);
+		left: calc(100% - var(--timeline-icon-size) - var(--timeline-line-width) / 2);
 	}
 
 	.timeline-align-right-alternate\@l >.timeline-line {
@@ -267,56 +288,56 @@ padding-right: 0;
 	.timeline-align-right\@l>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-left\@l>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-right-alternate\@l >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right-alternate\@l >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@l >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@l >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right\@l>div>.el-icon {
-		left: calc(-1*(40px - 4px) * 0.5);
+		left: calc(-1*(var(--timeline-icon-size) - var(--timeline-line-width)) * 0.5);
 	}
 
 	.timeline-align-left\@l>div>.el-icon {
-		left: calc(100% - (40px - 4px) * 0.5);
+		left: calc(100% - (var(--timeline-icon-size)) * 2);
 	}
 
 	.timeline-align-right-alternate\@l>div>.el-icon,
 	.timeline-align-left-alternate\@l>div>.el-icon {
-		left: calc(50% - 40px * 1);
+		left: calc(50% - var(--timeline-icon-size) * 1);
 	}
 }
 
@@ -327,7 +348,7 @@ padding-right: 0;
 	}
 
 	.timeline-align-left\@xl >.timeline-line {
-		left: calc(100%-20px);
+		left: calc(100% - var(--timeline-icon-size) - var(--timeline-line-width) / 2);
 	}
 
 	.timeline-align-right-alternate\@xl >.timeline-line {
@@ -344,55 +365,55 @@ padding-right: 0;
 	.timeline-align-right\@xl>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-left\@xl>div>.el-item {
 		width: auto;
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-right-alternate\@xl >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right-alternate\@xl >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@xl >div:nth-child(odd)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 0;
-		padding-right: 40px;
-padding-left: 0;
+		padding-right: 80px;
+		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@xl >div:nth-child(even)>.el-item {
-		width: calc(50% - 40px);
+		width: calc(50% - var(--timeline-icon-size));
 		left: 50%;
-		padding-left: 40px;
-padding-right: 0;
+		padding-left: var(--timeline-icon-size);
+		padding-right: 0;
 	}
 
 	.timeline-align-right\@xl>div>.el-icon {
-		left: calc(-1*(40px - 4px) * 0.5);
+		left: calc(-1*(var(--timeline-icon-size) - var(--timeline-line-width)) * 0.5);
 	}
 
 	.timeline-align-left\@xl>div>.el-icon {
-		left: calc(100% - (40px - 4px) * 0.5);
+		left: calc(100% - (var(--timeline-icon-size)) * 2);
 	}
 
 	.timeline-align-right-alternate\@xl>div>.el-icon,
 	.timeline-align-left-alternate\@xl>div>.el-icon {
-		left: calc(50% - 40px * 1);
+		left: calc(50% - var(--timeline-icon-size) * 1);
 	}
 }
