--- a/timeline/css/timeline.css
+++ b/timeline/css/timeline.css
@@ -34,7 +34,7 @@
 }
 
 .timeline-align-right>.timeline-line {
-	left: 20px;
+	left: calc(var(--timeline-icon-size)  / 2 + var(--timeline-line-width));
 }
 
 .timeline-align-left>.timeline-line {
@@ -113,7 +113,7 @@
 
 @media (min-width: 640px) {
 	.timeline-align-right\@s >.timeline-line {
-		left: 20px;
+		left: calc(var(--timeline-icon-size)  / 2 + var(--timeline-line-width));
 	}
 
 	.timeline-align-left\@s >.timeline-line {
@@ -190,7 +190,7 @@
 @media (min-width: 960px) {
 
 	.timeline-align-right\@m >.timeline-line {
-		left: 20px;
+		left: calc(var(--timeline-icon-size)  / 2 + var(--timeline-line-width));
 	}
 
 	.timeline-align-left\@m >.timeline-line {
@@ -267,7 +267,7 @@
 @media (min-width: 1200px) {
 
 	.timeline-align-right\@l >.timeline-line {
-		left: 20px;
+		left: calc(var(--timeline-icon-size)  / 2 + var(--timeline-line-width));
 	}
 
 	.timeline-align-left\@l >.timeline-line {
@@ -344,7 +344,7 @@
 @media (min-width: 1600px) {
 
 	.timeline-align-right\@xl >.timeline-line {
-		left: 20px;
+		left: calc(var(--timeline-icon-size)  / 2 + var(--timeline-line-width));
 	}
 
 	.timeline-align-left\@xl >.timeline-line {
