--- a/timeline/css/timeline.css
+++ b/timeline/css/timeline.css
@@ -17,6 +17,8 @@
 	height: 100%;
 	width: var(--timeline-line-width);
 	background-color: var(--timeline-line-color);
+	border-color: var(--timeline-line-color);
+	border-style: none;
 }
 
 .timeline-container>.timeline-line::after {
@@ -27,8 +29,8 @@
 	bottom: 0;
 	left: 50%;
 	transform: translate(-50%, 100%);
-	border-color: var(--timeline-line-color);
-	border-width: 4px;
+	border-color: inherit;
+	border-width: var(--timeline-line-width;
 	border-style: solid;
 	border-radius: 50%;
 }
