--- a/timeline/css/timeline.css
+++ b/timeline/css/timeline.css
@@ -18,6 +18,7 @@
 	width: var(--timeline-line-width);
 	background-color: var(--timeline-line-color);
 	border-color: var(--timeline-line-color);
+	background-color: inherit;
 	border-style: none;
 }
 
