--- a/timeline/css/timeline.css
+++ b/timeline/css/timeline.css
@@ -29,6 +29,7 @@
 	bottom: 0;
 	left: 50%;
 	transform: translate(-50%, 100%);
+	background-color: inherit;
 	border-radius: 50%;
 }
 
@@ -92,7 +93,6 @@
 	position: absolute;
 	background-color: #fff;
 	border-radius: 50%;
- 	border-color: var(--timeline-line-color);
 	border-width: 4px;
 	border-style: solid;
 }
