readme, license notice

--- a/hd-timeline/css/timeline.css
+++ b/hd-timeline/css/timeline.css
@@ -1,4 +1,4 @@
-/* Timeline CSS */
+/* Timeline Element Copyright (C) 2019–2021 Thomas Weidlich GNU GPL v3 */
 
 :root {
 	--timeline-line-color: rgba(0, 0, 0, 0.1);
