--- a/hd-timeline/css/timeline.css
+++ b/hd-timeline/css/timeline.css
@@ -77,7 +77,6 @@
 	position: relative;
 	width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 	left: 0;
-
 	padding-left: 0;
 }
 
@@ -85,7 +84,6 @@
 	position: relative;
 	width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 	left: 0;
-
 	padding-left: 0;
 }
 
@@ -120,12 +118,9 @@
 }
 
 .timeline-align-right>div>.timeline-icon-default,
+.timeline-align-left>div>.timeline-icon-default,
 .timeline-align-left-alternate>div>.timeline-icon-default,
 .timeline-align-right-alternate>div>.timeline-icon-default {
-	margin-left: var(--timeline-icon-size);
-}
-
-.timeline-align-left>div>.timeline-icon-default {
 	margin-left: var(--timeline-icon-size);
 }
 
@@ -175,14 +170,12 @@
 	.timeline-align-right-alternate\@s>div:nth-child(odd)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@s>div:nth-child(even)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
@@ -204,16 +197,6 @@
 	.timeline-align-right-alternate\@s>div>.el-timeline-icon,
 	.timeline-align-left-alternate\@s>div>.el-timeline-icon {
 		left: calc(50% - var(--timeline-icon-size) - var(--timeline-line-width) - var(--timeline-icon-padding));
-	}
-
-	.timeline-align-right\@s>div>.timeline-icon-default,
-	.timeline-align-left-alternate\@s>div>.timeline-icon-default,
-	.timeline-align-right-alternate\@s>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
-	}
-
-	.timeline-align-left\@s>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
 	}
 }
 
@@ -264,14 +247,12 @@
 	.timeline-align-right-alternate\@m>div:nth-child(odd)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@m>div:nth-child(even)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
@@ -293,16 +274,6 @@
 	.timeline-align-right-alternate\@m>div>.el-timeline-icon,
 	.timeline-align-left-alternate\@m>div>.el-timeline-icon {
 		left: calc(50% - var(--timeline-icon-size) - var(--timeline-line-width) - var(--timeline-icon-padding));
-	}
-
-	.timeline-align-right\@m>div>.timeline-icon-default,
-	.timeline-align-left-alternate\@m>div>.timeline-icon-default,
-	.timeline-align-right-alternate\@m>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
-	}
-
-	.timeline-align-left\@m>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
 	}
 }
 
@@ -353,14 +324,12 @@
 	.timeline-align-right-alternate\@l>div:nth-child(odd)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@l>div:nth-child(even)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
@@ -382,16 +351,6 @@
 	.timeline-align-right-alternate\@l>div>.el-timeline-icon,
 	.timeline-align-left-alternate\@l>div>.el-timeline-icon {
 		left: calc(50% - var(--timeline-icon-size) - var(--timeline-line-width) - var(--timeline-icon-padding));
-	}
-
-	.timeline-align-right\@l>div>.timeline-icon-default,
-	.timeline-align-left-alternate\@l>div>.timeline-icon-default,
-	.timeline-align-right-alternate\@l>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
-	}
-
-	.timeline-align-left\@l>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
 	}
 }
 
@@ -441,14 +400,12 @@
 	.timeline-align-right-alternate\@xl>div:nth-child(odd)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
 	.timeline-align-left-alternate\@xl>div:nth-child(even)>.timeline-item-container {
 		width: calc(50% - var(--timeline-icon-size) - var(--timeline-icon-padding) - var(--timeline-line-width) - var(--timeline-item-container-padding));
 		left: 0;
-
 		padding-left: 0;
 	}
 
@@ -470,15 +427,5 @@
 	.timeline-align-right-alternate\@xl>div>.el-timeline-icon,
 	.timeline-align-left-alternate\@xl>div>.el-timeline-icon {
 		left: calc(50% - var(--timeline-icon-size) - var(--timeline-line-width) - var(--timeline-icon-padding));
-	}
-
-	.timeline-align-right\@xl>div>.timeline-icon-default,
-	.timeline-align-left-alternate\@xl>div>.timeline-icon-default,
-	.timeline-align-right-alternate\@xl>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
-	}
-
-	.timeline-align-left\@xl>div>.timeline-icon-default {
-		margin-left: var(--timeline-icon-size);
 	}
 }
