fix item container width

--- a/hd-timeline/css/hd-timeline.css
+++ b/hd-timeline/css/hd-timeline.css
@@ -5,7 +5,7 @@
 	--hd-timeline-line-width: 4px;
 	--hd-timeline-icon-size: 20px;
 	--hd-timeline-icon-padding: calc(0.3 * var(--hd-timeline-icon-size));
-	--hd-timeline-item-container-padding: 40px;
+	--hd-timeline-item-container-margin: 40px;
 }
 
 .hd-timeline-container {
@@ -53,46 +53,46 @@
 	position: relative;
 	width: auto;
 	left: 0;
-	padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-	padding-right: 0;
+	margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+	margin-right: 0;
 }
 
 .hd-timeline-align-left > div:nth-child(n)>.hd-timeline-item-container {
 	position: relative;
 	width: auto;
 	left: 0;
-	padding-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-	padding-left: 0;
+	margin-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+	margin-left: 0;
 }
 
 .hd-timeline-align-right-alternate > div:nth-child(even)>.hd-timeline-item-container {
 	position: relative;
-	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 	left: 50%;
-	padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-	padding-right: 0;
+	margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+	margin-right: 0;
 }
 
 .hd-timeline-align-right-alternate > div:nth-child(odd)>.hd-timeline-item-container {
 	position: relative;
-	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 	left: 0;
-	padding-left: 0;
+	margin-left: 0;
 }
 
 .hd-timeline-align-left-alternate > div:nth-child(even)>.hd-timeline-item-container {
 	position: relative;
-	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 	left: 0;
-	padding-left: 0;
+	margin-left: 0;
 }
 
 .hd-timeline-align-left-alternate > div:nth-child(odd)>.hd-timeline-item-container {
 	position: relative;
-	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+	width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 	left: 50%;
-	padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-	padding-right: 0;
+	margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+	margin-right: 0;
 }
 
 .hd-timeline-container > div>.el-timeline-icon {
@@ -149,41 +149,41 @@
 	.hd-timeline-align-right\@s > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-left\@s > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-left: 0;
+		margin-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@s > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@s > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@s > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@s > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right\@s > div>.el-timeline-icon {
@@ -226,41 +226,41 @@
 	.hd-timeline-align-right\@m > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-left\@m > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-left: 0;
+		margin-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@m > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@m > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@m > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@m > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right\@m > div>.el-timeline-icon {
@@ -303,41 +303,41 @@
 	.hd-timeline-align-right\@l > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-left\@l > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-left: 0;
+		margin-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@l > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@l > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@l > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@l > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right\@l > div>.el-timeline-icon {
@@ -379,41 +379,41 @@
 	.hd-timeline-align-right\@xl > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-left\@xl > div:nth-child(n)>.hd-timeline-item-container {
 		width: auto;
 		left: 0;
-		padding-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-padding));
-		padding-left: 0;
+		margin-right: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) * 2 + var(--hd-timeline-item-container-margin));
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@xl > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right-alternate\@xl > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@xl > div:nth-child(even)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 0;
-		padding-left: 0;
+		margin-left: 0;
 	}
 
 	.hd-timeline-align-left-alternate\@xl > div:nth-child(odd)>.hd-timeline-item-container {
-		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-padding));
+		width: calc(50% - var(--hd-timeline-icon-size) - var(--hd-timeline-icon-padding) - var(--hd-timeline-line-width) - var(--hd-timeline-item-container-margin));
 		left: 50%;
-		padding-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-padding));
-		padding-right: 0;
+		margin-left: calc((var(--hd-timeline-icon-size) + var(--hd-timeline-icon-padding) + var(--hd-timeline-line-width)) + var(--hd-timeline-item-container-margin));
+		margin-right: 0;
 	}
 
 	.hd-timeline-align-right\@xl > div>.el-timeline-icon {
